fix finance table
google charts table works differently than before, financials table was
not showing

--- a/style.css
+++ b/style.css
@@ -1689,6 +1689,14 @@ label, input, button, select, textarea{
   display: none;
 }
 
+.google-visualization-table{
+  width: auto !important;
+}
+
+.google-visualization-table th{
+  font-weight: normal;
+}
+
 .projects-project-title{
   font-size: 1.5em;
   color: #008CCB;
